[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/management/management_inbox.gd" id="1"]

[node name="ManagementInbox" type="PanelContainer"]
custom_minimum_size = Vector2(550, 400)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="VBox"]

[node name="Title" type="Label" parent="VBox/Header"]
theme_override_font_sizes/font_size = 18
text = "Management Inbox"
size_flags_horizontal = 3

[node name="CloseBtn" type="Button" parent="VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
text = "X"

[node name="EmptyLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
text = "No notifications"

[node name="Scroll" type="ScrollContainer" parent="VBox"]
unique_name_in_owner = true
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CardList" type="VBoxContainer" parent="VBox/Scroll"]
unique_name_in_owner = true
size_flags_horizontal = 3
theme_override_constants/separation = 6
